lifeguard-derive/tests/ui/compile_error_partial_model_invalid_identifier_path_segment.stderr
error: Entity path contains invalid identifier "123invalid" at position 2 in #[lifeguard(entity = "valid::123invalid")]. Identifiers must be valid Rust identifiers (e.g., start with a letter or underscore, contain only alphanumeric characters and underscores).
  --> tests/ui/compile_error_partial_model_invalid_identifier_path_segment.rs:10:12
   |
10 | pub struct UserPartial {
   |            ^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/compile_error_partial_model_invalid_identifier_path_segment.rs:13:2
   |
13 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_partial_model_invalid_identifier_path_segment.rs`
